Exemplificando o conteudo Try Catch Finally Throw

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,10 @@
   "cSpell.words": [
     "Declaracoes",
     "Desempilha",
+    "Dividir",
     "Empilha",
+    "Erro",
+    "Informe",
     "Instrucao",
     "Instrucoes",
     "Nenhum",
@@ -13,7 +16,10 @@
     "curso",
     "est",
     "está",
+    "meros",
+    "n",
     "numero",
+    "números",
     "primeiro",
     "texto",
     "vazia",
